--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% if site.posts.size == 0 %}
-  <h2>No post found</h2>
+  <h2>博主还没有发布博客</h2>
 {% endif %}
 
 <div class="posts">
